# self_driving_bicycle_hw

./: .gitignore  CMakeLists.txt  README.md  bicycledrive_arduino.xml  package.xml
config/: bicycle_drive_controller.yaml
hardware/: bicyclebot_system.cpp  note
hardware/include/bicycledrive_arduino/: arduino_comms.hpp  bicyclebot_system.hpp  visibility_control.h  wheel.hpp
hardware/uno_code/: DCMotor.cpp  DCMotor.h  IRSensor.cpp  IRSensor.h  test.ino  uno_code.ino
include/self_driving_bicycle/: note
launch/: bicycle_drive.launch.py
src/: note
urdf/: bicycle_drive.xacro.urdf  inertial.xacro  lidar.xacro  materials.xacro  properties.xacro  ros2_control.xacro
